greetings-ticker/k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: greetings-ticker
spec:
  selector:
    app: greetings-ticker
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greetings-ticker
spec:
  selector:
    matchLabels:
      app: greetings-ticker
  template:
    metadata:
      labels:
        app: greetings-ticker
    spec:
      containers:
      - name: greetings-ticker
        image: quay.io/rhdevelopers/greetings-ticker
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "50Mi"
            cpu: "150m"
        ports:
        - containerPort: 80
