greetings-ticker/k8s/lingua-greeter-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: lingua-greeter
  annotations:
    config-defaults: |      
      # use http-server-close over keep-alive
      option http-server-close 
      # Set the max time to wait for a connection attempt to a server to succeed
      timeout connect 30s
      # Set the max allowed time to wait for a complete HTTP request
      timeout client  50s
      # Set the maximum inactivity time on the server side
      timeout server  50s
      # handle the situation where a client suddenly disappears from the net
      timeout client-fin 30s
    config-backend: |
      # increase the tunnel timeout
      timeout tunnel 10h      
spec:
  rules:
  - host: lingua-greeter.$MINIKUBE_IP.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: lingua-greeter
          servicePort: 8080
